set all api endpoints to plural to fullfill rest norm
